--- a/src/common/components/server-select/ServerSelect.css
+++ b/src/common/components/server-select/ServerSelect.css
@@ -22,6 +22,10 @@
   flex-wrap: nowrap !important;
 }
 
+.reactserverselect__value-container {
+  padding-right: 0px !important;
+}
+
 .reactserverselect__multi-value {
   background-color: theme('colors.purple.DEFAULT') !important;
   padding: 6px 12px !important;
@@ -99,6 +103,10 @@
   vertical-align: middle;
   content: '×';
   color: #c0c0c0 !important;
+}
+
+.reactserverselect__placeholder {
+  @apply truncate;
 }
 
 @media only screen and (min-width: 640px) {
